# wcpatcher

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE  License.txt  README.md  appveyor.yml  asmjit.VS2008.sln  asmjit.sln  lgtm.yml  paths.VS2008.vsprops  paths.vsprops  toolchain-mingw32.cmake  wcpatcher.VS2008.sln  wcpatcher.sln
extlibs/: asmjit.VS2008.vcproj  asmjit.VS2008.vsprops  asmjit.vcxproj  asmjit.vcxproj.filters  asmjit.vsprops
fake_ntdll/: fake_ntdll.vcproj  fake_ntdll.vcxproj  fake_ntdll.vcxproj.filters  ntapi.h  ntdef.h
src/: log.cpp  log.h  main.cpp  stdafx.h  utils.cpp  utils.h  verinfo.rc  wcp_cfg.cpp  wcp_cfg.h  wcp_filecache.cpp  wcp_filecache.h  wcp_filetree.cpp  wcp_filetree.h  wcp_hook.cpp  wcp_hook.h  wcp_intdata.h  wcp_memory.cpp  wcp_memory.h  wcp_plugin.cpp  wcp_plugin.h  wcp_simplemm.h  wcp_version.h  wcpatcher.VS2008.vcproj  wcpatcher.VS2008.vsprops  wcpatcher.vcxproj  wcpatcher.vcxproj.filters  wcpatcher.vsprops  wdx_api.h  winntapi.cpp  winntapi.h
src/bst/: config.hpp  core.hpp  list.hpp  srw_lock.cpp  string.hpp
